test/pass/codegen/checks/checkNumber/test.twge
block init {
    checks {
        checkNumber(lhs = 0, op = "!=", rhs = "{var}");
    }
}