test/fail/codegen/typeConversionInt/test.twge
block init {
    checks {
        checkNumber(lhs = false);
    }
}